--- a/wp-content/themes/wataru/assets/sass/modules/_sidecolumn.scss
+++ b/wp-content/themes/wataru/assets/sass/modules/_sidecolumn.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   width: 320px;
+  max-width: 100%;
   height: 120px;
   padding: 0 20px;
   background-image: url('../images/sidecolumn/banner.png');
@@ -23,12 +24,13 @@
     color: $color-white;
     font-family: $fontfamily-alegreya;
     font-size: 32px;
-    line-height: 1.2;
+    line-height: 1;
     letter-spacing: .1em;
   }
 
   &__ja {
     display: block;
+    margin-top: 5px;
     color: $color-white;
     font-size: $fontsize-sm;
   }
