--- a/wp-content/themes/wataru/assets/sass/style.scss
+++ b/wp-content/themes/wataru/assets/sass/style.scss
@@ -12,5 +12,5 @@
 @import 'modules/_button.scss';
 
 @import 'pages/_index.scss';
-@import 'pages/_schedule.scss';
+@import 'pages/_category.scss';
 @import 'pages/_profile.scss';
