--- a/wp-content/themes/wataru/assets/sass/pages/_profile.scss
+++ b/wp-content/themes/wataru/assets/sass/pages/_profile.scss
@@ -11,15 +11,28 @@
 
   &__container {
     display: flex;
+    flex-direction: column;
     margin-top: 20px;
+    @include screen-lg {
+      flex-direction: row;
+    }
   }
 
   &__name {
-    font-size: 24px;
     margin-bottom: 20px;
+    font-size: 24px;
+    line-height: 1.3;
+  }
+
+  &__name-en {
+    display: inline-block;
+    font-size: 20px;
   }
 
   &__text {
+    @include screen-lg {
+      order: 1;
+    }
     p {
       margin: 15px 0;
       text-align: justify;
@@ -28,9 +41,14 @@
 
   &__image {
     flex-shrink: 0;
-    width: 300px;
-    margin-left: 50px;
+    margin-bottom: 20px;
     text-align: center;
+    @include screen-lg {
+      width: 300px;
+      margin-left: 50px;
+
+      order: 2;
+    }
   }
 
   &__sns {
@@ -51,7 +69,7 @@
   }
 
   &__snsicon {
-    font-size: 1.5em;
     margin-right: 5px;
+    font-size: 1.5em;
   }
 }
