--- a/wp-content/themes/wataru/public/css/style.css
+++ b/wp-content/themes/wataru/public/css/style.css
@@ -520,18 +520,33 @@ i[class^="icon-"]:before, i[class*=" icon-"]:before {
     margin-top: -30px; }
   .w-profile__container {
     display: flex;
+    flex-direction: column;
     margin-top: 20px; }
+    @media screen and (min-width: 1000px) {
+      .w-profile__container {
+        flex-direction: row; } }
   .w-profile__name {
+    margin-bottom: 20px;
     font-size: 24px;
-    margin-bottom: 20px; }
+    line-height: 1.3; }
+  .w-profile__name-en {
+    display: inline-block;
+    font-size: 20px; }
+  @media screen and (min-width: 1000px) {
+    .w-profile__text {
+      order: 1; } }
   .w-profile__text p {
     margin: 15px 0;
     text-align: justify; }
   .w-profile__image {
     flex-shrink: 0;
-    width: 300px;
-    margin-left: 50px;
+    margin-bottom: 20px;
     text-align: center; }
+    @media screen and (min-width: 1000px) {
+      .w-profile__image {
+        width: 300px;
+        margin-left: 50px;
+        order: 2; } }
   .w-profile__sns {
     margin: 30px 0; }
   .w-profile__snsitem {
@@ -542,5 +557,5 @@ i[class^="icon-"]:before, i[class*=" icon-"]:before {
     .w-profile__snslink:hover {
       opacity: .6; }
   .w-profile__snsicon {
-    font-size: 1.5em;
-    margin-right: 5px; }
+    margin-right: 5px;
+    font-size: 1.5em; }
