ページャー

--- a/wp-content/themes/wataru/assets/sass/style.scss
+++ b/wp-content/themes/wataru/assets/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'modules/_sidecolumn.scss';
 @import 'modules/_content.scss';
 @import 'modules/_button.scss';
+@import 'modules/_pager.scss';
 
 @import 'pages/_index.scss';
 @import 'pages/_category.scss';
