ギャラリーとりあえず作った

--- a/wp-content/themes/ludens/assets/sass/style.scss
+++ b/wp-content/themes/ludens/assets/sass/style.scss
@@ -11,10 +11,12 @@
 @import 'menu';
 @import 'content';
 @import 'guide';
+@import 'pager';
 
 @import 'top';
 @import 'plan';
 @import 'contact';
 @import 'coming-soon';
 @import 'access';
+@import 'gallery';
 @import 'slick';
