--- a/wp-content/themes/wataru/assets/sass/_variables.scss
+++ b/wp-content/themes/wataru/assets/sass/_variables.scss
@@ -30,6 +30,7 @@ $fontsize-title: 46px;
 $width-default: 1000px;
 $width-maincolumn: 640px;
 $width-sidecolumn: 320px;
+$width-narrow: 640px;
 
 /* break points
 ----------------- */
