--- a/wp-content/themes/wataru/assets/sass/modules/_content.scss
+++ b/wp-content/themes/wataru/assets/sass/modules/_content.scss
@@ -7,6 +7,7 @@
 
   &__title {
     display: inline-block;
+    max-width: 100%;
     margin-bottom: 20px;
     padding-right: 80px;
     border-bottom: 3px solid $color-main;
