--- a/wp-content/themes/ludens/public/css/style.css
+++ b/wp-content/themes/ludens/public/css/style.css
@@ -483,29 +483,34 @@ table {
         font-size: 20px; } }
   .content-head__description {
     padding: 5px 0;
-    color: #7b7b7b;
     border-top: 2px solid #a9a9a9;
+    color: #7b7b7b;
     font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif; }
   .content-head__link-item {
     width: 180px; }
     .content-head__link-item:not(:first-child) {
       margin-left: 10px; }
   .content-head__link {
-    display: block;
-    padding: 0 10px;
-    transition: .3s;
-    color: #fff;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     background-color: #697584;
-    font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
-    font-weight: bold; }
-    @media screen and (min-width: 768px) {
-      .content-head__link {
-        font-size: 20px; }
-        .content-head__link::before {
-          margin-right: 5px;
-          content: '\25B6\FE0E'; } }
+    transition: .3s; }
     .content-head__link:hover {
       opacity: .8; }
+    .content-head__link span {
+      width: 100%;
+      padding: 0 10px;
+      color: #fff;
+      font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
+      font-weight: bold; }
+      @media screen and (min-width: 768px) {
+        .content-head__link span {
+          font-size: 20px; }
+          .content-head__link span::before {
+            margin-right: 5px;
+            content: '\25B6\FE0E'; } }
 
 .content-head-box-pc {
   display: none; }
@@ -543,14 +548,14 @@ table {
         font-size: 36px; } }
     .content-main__head--concept span {
       padding-right: 60px;
-      color: #7b7b7b;
       border-bottom: 2px solid #a9a9a9;
+      color: #7b7b7b;
       font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
       font-size: inherit;
       font-weight: inherit; }
     .content-main__head--facility {
-      color: #697584;
       border-bottom: 2px solid #697584;
+      color: #697584;
       font-family: "\30D2\30E9\30AE\30CE\89D2\30B4   Pro", "Hiragino Kaku Gothic Pro", "\30E1\30A4\30EA\30AA", "Meiryo", sans-serif; }
     .content-main__head--cuisine {
       color: #ae8a67;
@@ -563,14 +568,14 @@ table {
     font-weight: bold; }
     @media screen and (min-width: 768px) {
       .content-main__subhead {
-        margin: auto;
         width: 940px;
+        margin: auto;
         font-size: 20px; } }
-  .content-main__text {
+  .content-main__text, .content-main__content p {
     margin: 20px;
     color: #697584; }
     @media screen and (min-width: 768px) {
-      .content-main__text {
+      .content-main__text, .content-main__content p {
         width: 940px;
         margin: 20px auto; } }
   .content-main__image-box {
@@ -583,12 +588,12 @@ table {
       .content-main__image-box {
         display: flex;
         justify-content: space-between;
-        margin: 40px auto;
-        width: 940px; } }
-  .content-main__image {
+        width: 940px;
+        margin: 40px auto; } }
+  .content-main__image, .content-main__content img {
     box-shadow: 0 0 8px rgba(86, 54, 28, 0.6); }
     @media screen and (max-width: 767px) {
-      .content-main__image:not(:first-child) {
+      .content-main__image:not(:first-child), .content-main__content img:not(:first-child) {
         margin-top: 20px; } }
 
 .guide {
