--- a/wp-content/themes/felico/assets/sass/_reset.scss
+++ b/wp-content/themes/felico/assets/sass/_reset.scss
@@ -4,55 +4,82 @@ html {
   font-family: $font-default;
   font-size: 62.5%;
   font-weight: normal;
-  font-style:normal;
-  line-height: 1.6;
+  font-style: normal;
+  line-height: 1.8;
   overflow-y: scroll;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   vertical-align: baseline;
   text-decoration: none;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   color: $color-text;
   border: 0;
   outline: none;
+  background-color: $color-background;
 
-  font-feature-settings: "palt";
+  font-feature-settings: 'palt';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: transparent;
   -webkit-text-size-adjust: 100%;
 }
 
-body, div,
-h1, h2, h3, h4, h5, h6, p,
-a, span, time, mark,
-dl, dt, dd, ol, ul, li,
-form, label, legend,
+body,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+time,
+mark,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+form,
+label,
+legend,
 article,
-footer, header, main,
-menu, nav, section, summary,
+footer,
+header,
+main,
+menu,
+nav,
+section,
+summary,
 blockquote {
   font-family: $font-default;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: normal;
-  font-style:normal;
-  line-height: 1.6;
+  font-style: normal;
+  line-height: 1.8;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   vertical-align: baseline;
   text-decoration: none;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   color: inherit;
   border: 0;
   outline: none;
 
-  font-feature-settings: "palt";
+  font-feature-settings: 'palt';
   -webkit-tap-highlight-color: transparent;
 }
 
-a, span, em, time, small {
+a,
+span,
+em,
+time,
+small {
   font-size: inherit;
   font-weight: inherit;
   font-style: inherit;
@@ -61,6 +88,11 @@ a, span, em, time, small {
   padding: 0;
   color: inherit;
   border: 0;
+}
+
+a {
+  text-decoration: underline;
+  color: $color-pink;
 }
 
 img {
@@ -69,7 +101,10 @@ img {
   vertical-align: bottom;
 }
 
-input, textarea, fieldset, select {
+input,
+textarea,
+fieldset,
+select {
   font-size: inherit;
   font-weight: inherit;
   font-style: inherit;
@@ -78,12 +113,13 @@ input, textarea, fieldset, select {
   padding: 0;
 }
 
-ol, ul {
-  list-style:none;
+ol,
+ul {
+  list-style: none;
 }
 
 table {
-  border-spacing:0;
+  border-spacing: 0;
   border-collapse: collapse;
 }
 
