--- a/wp-content/themes/felico/assets/sass/style.scss
+++ b/wp-content/themes/felico/assets/sass/style.scss
@@ -36,23 +36,19 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
-  background-image: url('../images/mainview.jpg');
-  background-position: center center;
-  background-size: cover;
+  padding: 30px 0;
 
   @include screen-sm {
     height: 100vw;
   }
 
   &__title {
-    max-width: 30%;
-    margin: 180px 0 150px;
+    width: 500px;
+    margin: 30px 0 0;
 
     @include screen-sm {
-      max-width: 50%;
-      margin: 130px 0 100px;
+      max-width: 60%;
+      margin: 50px 0 20px;
     }
   }
 }
@@ -60,8 +56,8 @@
 .f-header {
   padding-top: 20px;
   &__title {
-    width: 70px;
-    margin: 10px auto;
+    width: 140px;
+    margin: 30px auto;
   }
 }
 
@@ -78,19 +74,23 @@
       padding: 0 20px;
       a {
         display: block;
-        padding: 5px 10px;
+        padding: 10px 20px;
         transition: 0.3s;
         text-decoration: none;
+        color: $color-brown;
+        background-color: #fff;
+        box-shadow: 2px 2px 0 $color-pink;
         &:hover {
-          color: $color-brown;
+          color: $color-pink;
         }
       }
     }
   }
+
   &--home {
-    a {
+    ul li a {
       font-size: 18px;
-      color: #fff;
+
       @include screen-sm {
         font-size: 14px;
       }
@@ -151,10 +151,6 @@
     line-height: 2;
     margin: 30px 0;
     letter-spacing: 0.05em;
-  }
-
-  .f-container {
-    background-color: transparent;
   }
 }
 
