スクリーンショット、style.cssの更新

--- a/wp-content/themes/origin/style.css
+++ b/wp-content/themes/origin/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Default Template
+Theme Name: Base
 Theme URI:
-Author: mimhhs
-Author URI: mimhhs.net
-Description: Most simple theme for demo
+Author: Shoko Sugito
+Author URI: http://www.shoko-sugito.work/
+Description: Base of theme
 Version: 1.0
 License:
 License URI:
