ヘッダースタイル

--- a/wp-content/themes/otsuki/assets/sass/_reset.scss
+++ b/wp-content/themes/otsuki/assets/sass/_reset.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 html {
-  font-family: $font-sansserif;
+  font-family: $font-serif;
   font-size: 62.5%;
   font-weight: normal;
   font-style: normal;
@@ -58,7 +58,7 @@ nav,
 section,
 summary,
 blockquote {
-  font-family: $font-sansserif;
+  font-family: $font-serif;
   font-size: 1.4rem;
   font-weight: normal;
   font-style: normal;
