--- a/wp-content/themes/otsuki/assets/sass/style.scss
+++ b/wp-content/themes/otsuki/assets/sass/style.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond&display=swap');
 @import 'variables';
 @import 'utils';
 @import 'reset';
+@import 'header';
