--- a/wp-content/themes/otsuki/assets/sass/_common.scss
+++ b/wp-content/themes/otsuki/assets/sass/_common.scss
@@ -13,3 +13,9 @@
 .o-main {
   padding: 30px 10px 100px;
 }
+
+.o-content {
+  margin: auto;
+  max-width: $width-content;
+  padding: 20px 10px;
+}
