--- a/wp-content/themes/otsuki/assets/sass/_variables.scss
+++ b/wp-content/themes/otsuki/assets/sass/_variables.scss
@@ -12,6 +12,8 @@ $color-weak: lighten($color-text, 30%);
 $font-serif: 'EB Garamond', 'ヒラギノ明朝 ProN W3', 'HiraMinProN-W3', 'HG明朝E',
   'ＭＳ Ｐ明朝', 'MS PMincho', 'MS 明朝', serif;
 
+$width-content: 600px;
+
 /* z indexes
 ----------------- */
 $z-index-header: 100000;
