トップ画像追加、メニューのTOP修正

--- a/wp-content/themes/otsuki/assets/sass/_index.scss
+++ b/wp-content/themes/otsuki/assets/sass/_index.scss
@@ -1,6 +1,11 @@
 .o-mainview {
   padding: 200px 10px;
   text-align: center;
+
+  &__sub {
+    margin-top: 50px;
+    color: $color-weak;
+  }
 }
 
 .o-show {
