--- a/wp-content/themes/otsuki/assets/sass/_header.scss
+++ b/wp-content/themes/otsuki/assets/sass/_header.scss
@@ -22,6 +22,9 @@
   }
 
   &__item {
+    display: flex;
+    align-items: center;
+
     a,
     span {
       display: block;
@@ -30,6 +33,12 @@
       color: $color-main;
       font-size: 16px;
       transition: 0.3s;
+    }
+
+    i {
+      display: block;
+      margin: -5px;
+      font-size: 30px;
     }
 
     a:hover,
