--- a/wp-content/themes/otsuki/assets/sass/_variables.scss
+++ b/wp-content/themes/otsuki/assets/sass/_variables.scss
@@ -6,6 +6,7 @@ $color-text: #4b473f;
 $color-main: #bca162;
 $color-main-weak: lighten($color-main, 20%);
 $color-weak: lighten($color-text, 30%);
+$color-red: #af2f28;
 
 /* font families
 ----------------- */
