--- a/wp-content/themes/mimhhs/public/css/style.css
+++ b/wp-content/themes/mimhhs/public/css/style.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Neuton|EB+Garamond|Inconsolata);@charset "UTF-8";
 html {
-  font-family: "EB Garamond", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
+  font-family: "EB Garamond", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", "HG明朝E", "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-size: 1.4rem;
   font-weight: normal;
   font-style: normal;
@@ -28,7 +28,7 @@ form, label, legend,
 article,
 footer, header, main,
 menu, nav, section, summary {
-  font-family: "EB Garamond", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
+  font-family: "EB Garamond", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", "HG明朝E", "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-size: 1.4rem;
   font-weight: normal;
   font-style: normal;
@@ -289,7 +289,7 @@ body {
 .pagination {
   margin-top: 30px; }
   .pagination .page-numbers {
-    font-family: "Neuton", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
+    font-family: "Neuton", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", "HG明朝E", "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
     font-size: 18px;
     line-height: 20px;
     display: inline-block;
@@ -323,7 +323,7 @@ body {
   line-height: 2; }
 
 .single .content h2, .page .content h2 {
-  font-family: "Open Sans", "\6E38\30B4\30B7\30C3\30AF\4F53", "Yu Gothic", YuGothic, "\30D2\30E9\30AE\30CE\89D2\30B4   Pro", "Hiragino Kaku Gothic Pro", "\30E1\30A4\30EA\30AA", "Meiryo", sans-serif;
+  font-family: "Open Sans", "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
   font-size: 18px;
   line-height: 2;
   margin: 50px 0 10px;
@@ -332,7 +332,7 @@ body {
     margin-top: 0; }
 
 .single .content h3, .page .content h3 {
-  font-family: "Open Sans", "\6E38\30B4\30B7\30C3\30AF\4F53", "Yu Gothic", YuGothic, "\30D2\30E9\30AE\30CE\89D2\30B4   Pro", "Hiragino Kaku Gothic Pro", "\30E1\30A4\30EA\30AA", "Meiryo", sans-serif;
+  font-family: "Open Sans", "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
   font-size: 16px;
   font-weight: bold;
   margin: 30px 0 10px; }
@@ -383,7 +383,7 @@ body {
     border-top: 1px solid #efefef; }
 
 .single .content code, .page .content code {
-  font-family: 'Inconsolata', monospace, '\6E38\30B4\30B7\30C3\30AF\4F53', 'Yu Gothic', YuGothic, '\30D2\30E9\30AE\30CE\89D2\30B4   Pro', 'Hiragino Kaku Gothic Pro', '\30E1\30A4\30EA\30AA', 'Meiryo', sans-serif; }
+  font-family: 'Inconsolata', monospace, '游ゴシック体', 'Yu Gothic', YuGothic, 'ヒラギノ角ゴ Pro', 'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', sans-serif; }
 
 .single .content pre, .page .content pre {
   padding: 10px 15px;
@@ -514,7 +514,7 @@ body {
     .archive .posts a:hover::before {
       width: 100%; }
   .archive .posts time {
-    font-family: "Neuton", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
+    font-family: "Neuton", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", "HG明朝E", "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
     display: inline-block;
     min-width: 70px;
     letter-spacing: 0.05em;
@@ -527,7 +527,7 @@ body {
   font-size: 24px; }
 
 .single .time {
-  font-family: "Neuton", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
+  font-family: "Neuton", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", "HG明朝E", "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   color: #a3a3a2; }
 
 .single .content {
