--- a/wp-content/themes/otsuki/assets/sass/_schedule.scss
+++ b/wp-content/themes/otsuki/assets/sass/_schedule.scss
@@ -1,6 +1,6 @@
 .o-schedule {
   &__item {
-    margin: 70px 0;
+    margin: 70px 0 85px;
     text-align: center;
     a {
       color: $color-main;
@@ -9,15 +9,20 @@
   }
   &__date {
     color: $color-weak;
+    font-size: 12px;
   }
   &__title {
     margin: 10px 0;
-    font-size: 18px;
+    font-size: 16px;
+  }
+  &__place {
+    font-size: 12px;
   }
   &__content {
-    margin: 15px auto 30px;
+    margin: 15px auto 40px;
     p {
-      margin: 10px 0;
+      font-size: 12px;
+      margin: 5px 0;
     }
   }
 }
