--- a/wp-content/themes/otsuki/assets/sass/_schedule.scss
+++ b/wp-content/themes/otsuki/assets/sass/_schedule.scss
@@ -1,4 +1,23 @@
 .o-schedule {
+  &__dateTitle {
+    text-align: center;
+    font-size: 18px;
+    margin: 0 50px;
+
+    span {
+      font-size: 24px;
+    }
+  }
+  &__monthSelector {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__selectorButton {
+    width: 30px;
+    text-align: center;
+  }
   &__item {
     margin: 70px 0 85px;
     text-align: center;
@@ -23,6 +42,12 @@
     p {
       font-size: 12px;
       margin: 5px 0;
+    }
+  }
+  &__link {
+    text-align: center;
+    a {
+      text-decoration: underline;
     }
   }
 }
