設定によって読み込むファイルをわける

--- a/wp-content/themes/otsuki/assets/sass/_icons.scss
+++ b/wp-content/themes/otsuki/assets/sass/_icons.scss
@@ -26,6 +26,9 @@ i[class*=' icon-'] {
   }
 }
 
-.icon-title:before {
+.icon-title-mongoloid:before {
   content: '\f101';
+}
+.icon-title-otsuki:before {
+  content: '\f102';
 }
