--- a/wp-content/themes/otsuki/assets/sass/_reset.scss
+++ b/wp-content/themes/otsuki/assets/sass/_reset.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 html {
-  font-family: $font-serif;
+  font-family: $font-default;
   font-size: 62.5%;
   font-weight: normal;
   font-style: normal;
@@ -10,6 +10,7 @@ html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: $color-background;
   vertical-align: baseline;
   text-decoration: none;
   letter-spacing: 0.07em;
@@ -58,7 +59,7 @@ nav,
 section,
 summary,
 blockquote {
-  font-family: $font-serif;
+  font-family: $font-default;
   font-size: 1.4rem;
   font-weight: normal;
   font-style: normal;
@@ -107,6 +108,10 @@ select {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+  &::placeholder {
+    color: #fff;
+  }
 }
 
 ol,
