--- a/wp-content/themes/otsuki/assets/sass/style.scss
+++ b/wp-content/themes/otsuki/assets/sass/style.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond&display=swap');
-@import 'variables';
+// @import 'variables_otsuki';
+@import 'variables_mongoloid';
 @import 'utils';
 @import 'reset';
 @import 'icons';
