--- a/wp-content/themes/otsuki/assets/sass/_snslist.scss
+++ b/wp-content/themes/otsuki/assets/sass/_snslist.scss
@@ -21,6 +21,15 @@
       width: 40px;
       height: 40px;
     }
+
+    &--profile {
+      opacity: 0.6;
+
+      img {
+        width: 30px;
+        height: 30px;
+      }
+    }
   }
 
   &__id {
