--- a/wp-content/themes/otsuki/style.css
+++ b/wp-content/themes/otsuki/style.css
@@ -3,7 +3,7 @@ Theme Name: Theme for Bunta Otsuki
 Theme URI:
 Author: Shoko Sugito
 Author URI: http://www.shoko-sugito.work
-Description: Theme for Bunta Otsuki, a guitor player and a music producer
+Description: Theme for Bunta Otsuki and his project Mongoloid Union
 Version: 1.0
 License:
 License URI:
