トップロゴ修正

--- a/wp-content/themes/otsuki/assets/sass/_variables_mongoloid.scss
+++ b/wp-content/themes/otsuki/assets/sass/_variables_mongoloid.scss
@@ -7,7 +7,7 @@ $color-text: #f0f7f4;
 $color-main: #b3bfb8;
 $color-main-weak: #b3bfb8;
 $color-weak: lighten($color-text, 30%);
-$color-background: #3c4859;
+$color-background: #516177;
 $color-red: #ed6a5a;
 
 /* font families
