--- a/wp-content/themes/otsuki/assets/sass/_variables_mongoloid.scss
+++ b/wp-content/themes/otsuki/assets/sass/_variables_mongoloid.scss
@@ -50,7 +50,7 @@ $z-index-modal: 110000;
 
   &-bgc {
     &-main {
-      background-color: $color-main;
+      background-color: $color-main !important;
     }
   }
 
