大月テーマ内エントリーファイル増やした

--- a/wp-content/themes/otsuki/assets/sass/style_otsuki.scss
+++ b/wp-content/themes/otsuki/assets/sass/style_otsuki.scss
@@ -1,5 +1,4 @@
-// @import 'variables_otsuki';
-@import 'variables_mongoloid';
+@import 'variables_otsuki';
 @import 'utils';
 @import 'reset';
 @import 'icons';
