--- a/wp-content/themes/mao/assets/sass/_variables.scss
+++ b/wp-content/themes/mao/assets/sass/_variables.scss
@@ -18,7 +18,10 @@ $color-input-border: #93989e;
 
 /* font families
 ----------------- */
-$font-sansserif: 'Source Sans Pro', 'ヒラギノ角ゴ Pro', 'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', sans-serif;
+$font-sansserif: 'Source Sans Pro', 'ヒラギノ角ゴ Pro',
+  'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', sans-serif;
+$font-family-default: 'Montserrat', 'ヒラギノ角ゴ Pro',
+  'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', sans-serif;
 
 /* font sizes
 ----------------- */
