--- a/wp-content/themes/mao/assets/sass/_variables.scss
+++ b/wp-content/themes/mao/assets/sass/_variables.scss
@@ -2,19 +2,7 @@
 
 /* colors
 ----------------- */
-$color-black: #141415;
-$color-text: #141415;
-$color-text-weak: #93989e;
-$color-text-link: #2f6ab2;
-$color-background: #f7f8fa;
-$color-accent: #c91138;
-$color-theme: #2f6ab2;
-$color-technic: #2f6ab2;
-$color-performance: #98c746;
-$color-cm: #f4bf20;
-$color-photo: #cf5e9e;
-
-$color-input-border: #93989e;
+$color-text: #fff;
 
 /* font families
 ----------------- */
